linstaller (1.52.2-1) emily; urgency=low

  * core/cli_frontend: new action_list widget
  * modules/: new module, widget_test (the widget factory
    for linstaller! :D)

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 13 Nov 2011 11:00:05 +0100

linstaller (1.52.1-1) emily; urgency=low

  * partdisks: library: fixed failed return if no disks are
    available.
  * setup.py and debian/: ship update module; depend on apt.cache
    (python-apt).

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 03 Nov 2011 21:28:26 +0100

linstaller (1.52.0-1) emily; urgency=low

  * partdisks: use the correct partition in the "delete a system"
               option in the automatic partitioner.
  * modules: added new update module: checks for linstaller updates.
             Seeds: 'packages' in [module:update].
             Type: frontend only.
  * linstaller: support for full application restart
  * linstaller: some syntax changes for restart,reboot,fullrestart
                actions.
  * config/semplice-base: updated to match inclusion of update
                          module.
  * core/main: support for shell=False on sexec.
  * debian/control: linstaller: depend on modules = ${binary:Version}
  * linstalleralan: Renamed "Go Classic!" to "Launch linstaller", as
                    in emily only the CLI ("Classic") frontend will
                    be available, and this only confuses people ;)
  * debian/source/format: this is a not native package.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Fri, 28 Oct 2011 12:02:52 +0200

linstaller (1.51.1-1) emily; urgency=low

  * partdisks: deal with invalid partition tables

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 24 Oct 2011 11:20:52 +0200

linstaller (1.51.0-1) emily; urgency=low

  * linstalleralan: ported to alan 0.4.0, support for "config" option
                    in order to specify configuration file from the
                    tree.conf.
  * Release for Beta1.
